fix no background bug on IE

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -69,14 +69,16 @@ html, body {
 }
 
 main {
-	background: -webkit-repeating-linear-gradient(180deg, $space-black, $space-blue 30%, $space-blue-dark 80%, $space-pink 100%);
-	background: -o-repeating-linear-gradient(180deg, $space-black, $space-blue 30%, $space-blue-dark 80%, $space-pink 100%);
-	background: -moz-repeating-linear-gradient(180deg, $space-black, $space-blue 30%, $space-blue-dark 80%, $space-pink 100%);
-	background: repeating-linear-gradient(180deg, $space-black, $space-blue 30%, $space-blue-dark 80%, $space-pink 100%);
-
 	.content {
 		z-index: 2;
 		width: 100%;
+
+		background-color: $space-black;
+		// filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#111A22', endColorstr='#1E343E');
+		background: -webkit-repeating-linear-gradient(180deg, $space-black, $space-blue 30%, $space-blue-dark 80%, $space-pink 100%);
+		background: -o-repeating-linear-gradient(180deg, $space-black, $space-blue 30%, $space-blue-dark 80%, $space-pink 100%);
+		background: -moz-repeating-linear-gradient(180deg, $space-black, $space-blue 30%, $space-blue-dark 80%, $space-pink 100%);
+		background: repeating-linear-gradient(180deg, $space-black, $space-blue 30%, $space-blue-dark 80%, $space-pink 100%);
 
 		.stars-wrapper {
 			position: absolute;
@@ -386,6 +388,8 @@ main {
 					padding: 5% 10%;
 					z-index: 5;
 					opacity: 0;
+
+					overflow: hidden;
 
 					transition: top 0.6s ease-out, opacity 0.6s ease-out;
 
